# brain-games

./: .gitignore  .travis.yml  Makefile  README  README.md  pyproject.toml
brain_games/: cli.py  game_engine.py  games.py
brain_games/games/: calc.py  calc_game.py  even.py  even_game.py  gcd.py  gcd_game.py  prime.py  prime_game.py  progression.py  progression_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
eg_b_brain_games.egg-info/: PKG-INFO  SOURCES.txt
