[tool.poetry]
name = "eg-b_brain_games"
version = "1.4.2"
description = "5 brain games! pip install -i https://test.pypi.org/simple/ eg-b-brain-games"
authors = ["eg-b"]
packages = [
    { include = "brain_games" },
  ]

[[tool.poetry.source]]
name= "testpypi"
url= "https://test.pypi.org/legacy/"

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-prime = "brain_games.scripts.brain_prime:main"
brain-progression = "brain_games.scripts.brain_progression:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

